[project]
name = "langgraph-agent-study"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain (>=0.3.18,<0.4.0); python_version >= '3.12' and python_version < '4.0'",
    "langgraph (>=0.3.11,<0.4.0)",
    "langchain-openai (>=0.3.8,<0.4.0)",
    "langgraph-checkpoint-postgres (>=2.0.17,<3.0.0)",
    "langchain-community (>=0.3.19,<0.4.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "yfinance (>=0.2.54,<0.3.0)",
    "graphviz (>=0.20.3,<0.21.0)",
    "dotenv (>=0.9.9,<0.10.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

